Rework the look of the header navigation
This updates the header navigation so that:

- Added a colored bar to break it apart from the chapter navigation.
- Removed the colored circle and just use link color to make it
  look cleaner.

--- a/crates/mdbook-html/front-end/templates/toc.js.hbs
+++ b/crates/mdbook-html/front-end/templates/toc.js.hbs
@@ -424,8 +424,11 @@ window.customElements.define('mdbook-sidebar-scrollbox', MDBookSidebarScrollbox)
             currentParent.ol.appendChild(li);
         }
 
+        const onThisPage = document.createElement('div');
+        onThisPage.classList.add('on-this-page');
+        onThisPage.append(stack[0].ol);
         const activeItemSpan = activeSection.parentElement;
-        activeItemSpan.after(stack[0].ol);
+        activeItemSpan.after(onThisPage);
     });
 
     document.addEventListener('DOMContentLoaded', reloadCurrentHeader);
