Support dollar math syntax (fixes #1402, #662, #400)
Letting MathJax scrape the output HTML for math delimiters makes it
awkward to write complex formulas because characters with a special
meaning in Markdown must be escaped. This commit implements a new
`output.html.math` option that uses the support for parsing `$...$`
and `$$...$$` in Markdown introduced in pulldown-cmark 0.11.0. The old
option `output.html.mathjax-support` is left for backwards compatibility.

pulldown-cmark renders formulas into `<span>` tags with special classes,
so we have to configure MathJax to look for these instead of textual
delimiters. The code for this was helpfully provided by David Cervone on
<https://groups.google.com/g/mathjax-users/c/6cMuCH2dgmQ>.

The latest version of MathJax 4 is used rather than MathJax 2.7.1
like the mathjax-support option, because the way to do this configuration
has changed between MathJax 2 and MathJax 3, I'm not sure how to do
it on MathJax 2, and it is an old version anyway. The Cloudflare
CDN doesn't seem to work for MathJax 4, so it uses the jsdelivr.net
one recommended by the MathJax documentation. In the future,
it would be good to use a bundled version of MathJax by default
and/or make the CDN URL configurable.

Fixes #1402, fixes #662, fixes #400

--- a/crates/mdbook-html/front-end/templates/index.hbs
+++ b/crates/mdbook-html/front-end/templates/index.hbs
@@ -45,8 +45,36 @@
         <link rel="stylesheet" href="{{ resource this }}">
         {{/each}}
 
-        {{#if mathjax_support}}
-        <!-- MathJax -->
+        {{#if math}}
+        <!-- Load MathJax -->
+        {{! MathJax normally looks for math tags in the page content. In our case,
+            the math tags are parsed in the Markdown input by pulldown-cmark and
+            converted to <span> tags with special CSS classes. This bit of code
+            tells MathJax to render these and only these. Adapted from
+            <https://docs.mathjax.org/en/latest/upgrading/v2.html#math-script-example> }}
+        <script>
+        MathJax = {
+          options: {
+            renderActions: {
+              find: [10, function (doc) {
+                for (const node of document.querySelectorAll('span.math-inline, span.math-display')) {
+                  const display = node.classList.contains('math-display');
+                  const math = new doc.options.MathItem(node.textContent, doc.inputJax[0], display);
+                  const text = document.createTextNode('');
+                  node.parentNode.replaceChild(text, node);
+                  math.start = {node: text, delim: '', n: 0};
+                  math.end = {node: text, delim: '', n: 0};
+                  doc.math.push(math);
+                }
+              }, '']
+            }
+          }
+        };
+        </script>
+        <script defer src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
+        {{else if mathjax_support}}
+        <!-- Load MathJax -->
+        {{! Legacy MathJax support that just tells MathJax to look for math tags in the page content }}
         <script async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
         {{/if}}
 
