Fix current page detection for clean URLs
Previously, the sidebar JavaScript logic for detecting the "active" page
relied on URL and assumed it would end with .html. When using clean URLs
without this suffix, this logic would fail to correctly highlight the
current page in the sidebar.

This change moves the current page identification to server-side
rendering by adding a data-current-link attribute to the HTML root
element.

Fixes https://github.com/rust-lang/mdBook/issues/2962

--- a/crates/mdbook-html/front-end/templates/index.hbs
+++ b/crates/mdbook-html/front-end/templates/index.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="{{ language }}" class="{{ default_theme }} sidebar-visible" dir="{{ text_direction }}">
+<html lang="{{ language }}" class="{{ default_theme }} sidebar-visible" dir="{{ text_direction }}" data-current-link="{{ current_link }}">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
